syntax = "proto3";

option java_multiple_files = true;
option java_package = "dk.via.course_assignment_2.grpc";

service SlaughterhouseService {
  rpc retrieveAllAnimalIDsFromProduct(ProductNumber) returns(AnimalsRegNumberInProduct);
  rpc retrieveAllProductIDsFromAnimal(AnimalRegNumber) returns(ProductsRegNumberInAnimal);
}

message ProductNumber {
  string product_reg_number = 1;
}

message AnimalsRegNumberInProduct {
  repeated string animal_reg_numbers = 1;
}

message AnimalRegNumber {
  string animal_reg_number = 1;
}

message ProductsRegNumberInAnimal {
  repeated string product_reg_numbers = 1;
}


